--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ black = "^22.6.0"
 Django = "^4.0.6"
 dynaconf = "^3.1.9"
 ipython = "^8.4.0"
+fastapi = "^0.79.0"
+pandas = "^1.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
