--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dynaconf = "^3.1.9"
 ipython = "^8.4.0"
 fastapi = "^0.79.0"
 pandas = "^1.4.3"
+numpy = "^1.23.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
